# los-rios-rinp-2023

./: .gitignore  README.md  demo.py  main.py  pyproject.toml  requirements.txt
config/: default.yaml
data/: datasetSerieTemporal.csv
docs/: custom-styles.css  index.html  interactive.js  styles.css
notebooks/: introHTML.ipynb  rnp_comparativo_regiones.ipynb
scripts/: export_toneladas_por_region.py  run_pipeline.py
src/data_models/: __init__.py  config.py  pipeline.py  quality.py
src/etl/: __init__.py  extract.py  load.py  pipeline.py  transform.py
src/utils/: __init__.py  config.py  io.py  logging.py
src/validators/: __init__.py  schemas.py
tests/: test_pipeline.py  test_transform.py
